Attempting to fix a horizontal overflow print issue

--- a/css/main.css
+++ b/css/main.css
@@ -132,5 +132,7 @@ a.remove-notepad:hover {
     .pane {
         border: none;
         height: auto;
+        width: auto;
+        overflow: visible;
     }
 }
